Update branding and add constructors to docs
Replaced the navbar logo and title with branding for Kraken Engine, updated the introduction page with a banner image, and added constructor signatures to all class documentation pages.

--- a/contents/docs/classes/animation-controller/index.mdx
+++ b/contents/docs/classes/animation-controller/index.mdx
@@ -2,6 +2,7 @@
 title: AnimationController
 description: An sprite animation manager and controller.
 ---
+- <ApiSig name="AnimationController" />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
