--- a/contents/docs/classes/audio/index.mdx
+++ b/contents/docs/classes/audio/index.mdx
@@ -2,6 +2,7 @@
 title: Audio
 description: An audio buffer loaded completely in memory.
 ---
+- <ApiSig name="Audio" params={[{ name: "file_path", type: "str" }, { name: "volume", type: "float", default: '1.0' }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
