--- a/contents/docs/classes/circle/index.mdx
+++ b/contents/docs/classes/circle/index.mdx
@@ -2,6 +2,7 @@
 title: Circle
 description: A representation of a circle shape with basic geometric operations and collision detection.
 ---
+- <ApiSig name="Circle" params={[{ name: "pos", type: "Vec2" }, { name: "radius", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
