--- a/contents/docs/classes/color/index.mdx
+++ b/contents/docs/classes/color/index.mdx
@@ -2,6 +2,8 @@
 title: Color
 description: A color representation in different formats.
 ---
+- <ApiSig name="Color" />
+- <ApiSig name="Color" params={[{ name: "r", type: "int" }, { name: "g", type: "int" }, { name: "b", type: "int" }, { name: "a", type: "int", default: '255' }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
