--- a/contents/docs/classes/easing-animation/index.mdx
+++ b/contents/docs/classes/easing-animation/index.mdx
@@ -2,6 +2,7 @@
 title: EasingAnimation
 description: An animation for easing transitions between two points.
 ---
+- <ApiSig name="EasingAnimation" params={[{ name: "start", type: "Vec2" }, { name: "end", type: "Vec2" }, { name: "duration", type: "float" }, { name: "ease_func", type: "Callable[[float], float]" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
