--- a/contents/docs/classes/line/index.mdx
+++ b/contents/docs/classes/line/index.mdx
@@ -2,6 +2,11 @@
 title: Line
 description: A representation of a line segment.
 ---
+- <ApiSig name="Line" />
+- <ApiSig name="Line" params={[{ name: "a", type: "Vec2" }, { name: "b", type: "Vec2" }]} />
+- <ApiSig name="Line" params={[{ name: "a", type: "Vec2" }, { name: "bx", type: "float" }, { name: "by", type: "float" }]} />
+- <ApiSig name="Line" params={[{ name: "ax", type: "float" }, { name: "ay", type: "float" }, { name: "b", type: "Vec2" }]} />
+- <ApiSig name="Line" params={[{ name: "ax", type: "float" }, { name: "ay", type: "float" }, { name: "bx", type: "float" }, { name: "by", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
