--- a/contents/docs/classes/mask/index.mdx
+++ b/contents/docs/classes/mask/index.mdx
@@ -2,6 +2,9 @@
 title: Mask
 description: A 2D binary mask for pixel-perfect collision detection and pixel manipulation.
 ---
+- <ApiSig name="Mask" />
+- <ApiSig name="Mask" params={[{ name: "size", type: "Vec2" }, { name: "filled", type: "bool", default: "False" }]} />
+- <ApiSig name="Mask" params={[{ name: "pixel_array", type: "PixelArray" }, { name: "threshold", type: "int", default: "1" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
