--- a/contents/docs/classes/pixel-array/index.mdx
+++ b/contents/docs/classes/pixel-array/index.mdx
@@ -2,6 +2,8 @@
 title: PixelArray
 description: An array of pixel color data.
 ---
+- <ApiSig name="PixelArray" params={[{ name: "size", type: "Vec2" }]} />
+- <ApiSig name="PixelArray" params={[{ name: "file_path", type: "str" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
