--- a/contents/docs/classes/polar-coordinate/index.mdx
+++ b/contents/docs/classes/polar-coordinate/index.mdx
@@ -1,6 +1,8 @@
 ---
 title: PolarCoordinate
 ---
+- <ApiSig name="PolarCoordinate" />
+- <ApiSig name="PolarCoordinate" params={[{ name: "angle", type: "float" }, { name: "radius", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
