--- a/contents/docs/classes/polygon/index.mdx
+++ b/contents/docs/classes/polygon/index.mdx
@@ -2,6 +2,8 @@
 title: Polygon
 description: A polygon shape defined by a series of points.
 ---
+- <ApiSig name="Polygon" />
+- <ApiSig name="Polygon" params={[{ name: "points", type: "Sequence[Vec2]" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
