--- a/contents/docs/classes/rect/index.mdx
+++ b/contents/docs/classes/rect/index.mdx
@@ -2,6 +2,11 @@
 title: Rect
 description: An AABB object with a position and size.
 ---
+- <ApiSig name="Rect" />
+- <ApiSig name="Rect" params={[{ name: "pos", type: "Vec2" }, { name: "size", type: "Vec2" }]} />
+- <ApiSig name="Rect" params={[{ name: "pos", type: "Vec2" }, { name: "w", type: "float" }, { name: "h", type: "float" }]} />
+- <ApiSig name="Rect" params={[{ name: "x", type: "float" }, { name: "y", type: "float" }, { name: "size", type: "Vec2" }]} />
+- <ApiSig name="Rect" params={[{ name: "x", type: "float" }, { name: "y", type: "float" }, { name: "w", type: "float" }, { name: "h", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
