--- a/contents/docs/classes/texture/index.mdx
+++ b/contents/docs/classes/texture/index.mdx
@@ -2,6 +2,8 @@
 title: Texture
 description: A 2D texture that can be rendered to the screen.
 ---
+- <ApiSig name="Texture" params={[{ name: "file_path", type: "str" }]} />
+- <ApiSig name="Texture" params={[{ name: "pixel_array", type: "PixelArray" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
