--- a/contents/docs/classes/tile_map/index.mdx
+++ b/contents/docs/classes/tile_map/index.mdx
@@ -2,6 +2,7 @@
 title: TileMap
 description: A Tiled map containing multiple layers of tiles.
 ---
+- <ApiSig name="TileMap" params={[{ name: "tmx_path", type: "str" }, { name: "border_size", type: "int", default: "0" }]} />
 
 ## Methods
 ---
