--- a/contents/docs/classes/timer/index.mdx
+++ b/contents/docs/classes/timer/index.mdx
@@ -2,6 +2,7 @@
 title: Timer
 description: A simple countdown timer.
 ---
+- <ApiSig name="Timer" params={[{ name: "duration", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
