--- a/contents/docs/classes/vec2/index.mdx
+++ b/contents/docs/classes/vec2/index.mdx
@@ -2,6 +2,9 @@
 title: Vec2
 description: A 2D mathematical vector representation.
 ---
+- <ApiSig name="Vec2" />
+- <ApiSig name="Vec2" params={[{ name: "value", type: "float" }]} />
+- <ApiSig name="Vec2" params={[{ name: "x", type: "float" }, { name: "y", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
