--- a/contents/docs/getting-started/introduction/index.mdx
+++ b/contents/docs/getting-started/introduction/index.mdx
@@ -4,6 +4,8 @@ title: Introduction
 
 Welcome to **Kraken Engine**!
 
+<img src="/images/kraken-engine-banner.png" alt="Kraken Engine Banner" style={{borderWidth: 0}} />
+
 Fast and lightweight, Kraken is a 2D videogame development framework built on top of SDL3.
 It's designed to offer just the right balance between high-level convenience and low-level control, making it ideal for both hobbyists and experienced developers.
 
