--- a/contents/docs/classes/audio-stream/index.mdx
+++ b/contents/docs/classes/audio-stream/index.mdx
@@ -2,6 +2,7 @@
 title: AudioStream
 description: An audio stream that streams data from disk.
 ---
+- <ApiSig name="AudioStream" params={[{ name: "file_path", type: "str" }, { name: "volume", type: "float", default: '1.0' }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
