--- a/contents/docs/classes/camera/index.mdx
+++ b/contents/docs/classes/camera/index.mdx
@@ -2,6 +2,9 @@
 title: Camera
 description: A class for managing the camera's position and view in the scene.
 ---
+- <ApiSig name="Camera" />
+- <ApiSig name="Camera" params={[{ name: "pos", type: "Vec2" }]} />
+- <ApiSig name="Camera" params={[{ name: "x", type: "float" }, { name: "y", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
