Add Font class docs and update renderer/texture APIs
Added documentation for the Font class, including its methods and usage notes. Moved the render method docs from the Texture class to the renderer submodule docs. Extended Vec2 docs with additional swizzling properties. Shrink kraken banner image for faster loading.

--- a/contents/docs/classes/vec2/index.mdx
+++ b/contents/docs/classes/vec2/index.mdx
@@ -13,8 +13,12 @@ description: A 2D mathematical vector representation.
 | --- | --- | --- |
 | `x` | The x-component of the vector | `float` |
 | `y` | The y-component of the vector | `float` |
+| `xy` | A tuple representing the (x, y) components of the vector | `tuple[float, float]` |
+| `yx` | A tuple representing the (y, x) components of the vector | `tuple[float, float]` |
+| `xx` | A tuple representing the (x, x) components of the vector | `tuple[float, float]` |
+| `yy` | A tuple representing the (y, y) components of the vector | `tuple[float, float]` |
 | `length` | The length (magnitude) of the vector | `float` |
-| `angle` | The angle of the vector in radians | `float` |
+| `angle` | The angle of the vector in radians | `float` |  
 
 ## Methods
 ---
