--- a/contents/docs/functions/renderer/index.mdx
+++ b/contents/docs/functions/renderer/index.mdx
@@ -40,6 +40,31 @@ Present the current render target to the display, swapping buffers.
 
 </div>
 
+## Draw
+<div className="api-card">
+
+<ApiSig name="draw" params={[{name: "texture", type: "Texture"}, {name: 'dst', type: 'Rect'}, {name: 'src', type: 'Rect', default: 'None'}]} returns="None" />
+
+Render the texture within the specified destination rectangle, optionally using a source rectangle to select a portion of the texture.
+
+_**Parameters**_
+- `texture` : The texture to draw.
+- `dst` : The destination rectangle to render the texture into.
+- `src` : An optional source rectangle to select a portion of the texture.
+
+---
+
+<ApiSig name="draw" params={[{name: "texture", type: "Texture"}, {name: 'pos', type: 'Vec2', default: 'None'}, {name: 'anchor', type: 'Anchor', default: 'CENTER'}]} returns="None" />
+
+Render the texture at the specified position, optionally using an anchor point to control the alignment.
+
+_**Parameters**_
+- `texture` : The texture to draw.
+- `pos` : The position to render the texture.
+- `anchor` : The anchor point for alignment.
+
+</div>
+
 ## Get Res
 <div className="api-card">
 
