update instructions and fix github link
temp remove searchbar

--- a/contents/docs/getting-started/installation/index.mdx
+++ b/contents/docs/getting-started/installation/index.mdx
@@ -25,4 +25,11 @@ To get started, you can install Kraken from PyPI using `pip`.
   </StepperItem>
 </Stepper>
 
-You’re now ready to start writing your first Kraken script.
+You're now ready to start writing your first Kraken script!
+
+### Updating Kraken Engine
+To update Kraken Engine to the latest version, use the following command:
+
+```plaintext
+pip install --upgrade kraken-engine
+```
