Add guides section for renderer
Introduces a new 'Guides' section with documentation on using the renderer, including how it works, drawing shapes, and rendering textures.

--- a/contents/docs/getting-started/installation/index.mdx
+++ b/contents/docs/getting-started/installation/index.mdx
@@ -18,7 +18,7 @@ To get started, you can install Kraken from PyPI using `pip`.
   <StepperItem title="Import Module Into an Editor">
     After installing, import the module into a code editor (I recommend PyCharm or VSCode):
 
-    ```python
+    ```py
     import pykraken
     # Or the recommended way -> import pykraken as kn
     ```
@@ -27,7 +27,7 @@ To get started, you can install Kraken from PyPI using `pip`.
 
 You're now ready to start writing your first Kraken script!
 
-### Updating Kraken Engine
+### Updating
 To update Kraken Engine to the latest version, use the following command:
 
 ```plaintext
