Revamp docs, UI, and assets for improved clarity and style
Added new InputAction class documentation and updated Mask, PixelArray, and Texture docs to reflect new API. Expanded renderer and texture usage guides with new images and examples, including batching, transformations, and atlases. Updated site logo, improved navbar and styles, and enhanced light/dark theme support in MainWrapper and CSS. Refined color palette and component styles for better visual consistency.

Added IDs to key navigation and UI elements for better accessibility and testing. Enhanced button and navigation hover effects, updated color variables and layout in globals.css, and improved the appearance of the Table of Contents and sidebar. Fixed a typo in a code example and expanded the rendering textures guide.

--- a/contents/docs/functions/renderer/index.mdx
+++ b/contents/docs/functions/renderer/index.mdx
@@ -77,3 +77,20 @@ _**Returns**_
 `Vec2` : The width and height of the render target in pixels.
 
 </div>
+
+## Read Pixels
+<div className="api-card">
+
+<ApiSig name="read_pixels" params={[{ name: "src", type: "Rect", default: "None" }]} returns="PixelArray" />
+
+Read pixel data from the current render target within the specified rectangle.
+
+_**Parameters**_
+
+- `src` : The source rectangle to read pixels from. If omitted, the entire render target is read.
+
+_**Returns**_
+
+`PixelArray` : The pixel data read from the render target.
+
+</div>
