--- a/contents/guides/using-the-renderer/how-it-works/index.mdx
+++ b/contents/guides/using-the-renderer/how-it-works/index.mdx
@@ -17,7 +17,7 @@ That would be "single buffer" rendering, and you can see how that looks for your
 [Coding Challenge: 3D on Apple II](https://youtu.be/PHfKCxjsmos?t=530&si=aBDHqR8RBO9VQ1OK).
 
 Instead, we use "double buffer" rendering:
-<img src="/images/double buffering.png" alt="Diagram of Double Buffering" id="dbuff" />
+<img src="/images/double-buffering.png" alt="Diagram of Double Buffering" id="dbuff" />
 
 ## Applying In Code
 When you create a window in Kraken, you also create a global renderer for that window:
