--- a/contents/docs/classes/mask/index.mdx
+++ b/contents/docs/classes/mask/index.mdx
@@ -14,7 +14,6 @@ description: A 2D binary mask for pixel-perfect collision detection and pixel ma
 | `width` | The width of the mask | `int` |
 | `height` | The height of the mask | `int` |
 | `size` | The size of the mask | `Vec2` |
-| `rect` | The rectangle defining the mask area | `Rect` |
 
 ## Methods
 ---
@@ -81,6 +80,17 @@ _**Returns**_
 
 `bool` : True if the mask is empty, False otherwise.
 
+</div>
+
+### Get Rect
+<div className="api-card">
+
+<ApiSig name="get_rect" returns="Rect" />
+
+Get a rectangle defining the width and height of the mask.
+
+_**Returns**_
+`Rect` : The rectangle defining the mask area.
 </div>
 
 ### Set At
