--- a/contents/docs/classes/pixel-array/index.mdx
+++ b/contents/docs/classes/pixel-array/index.mdx
@@ -15,7 +15,6 @@ description: An array of pixel color data.
 | `width` | The width of the pixel array in pixels | `int` |
 | `height` | The height of the pixel array in pixels | `int` |
 | `size` | The size of the pixel array | `Vec2` |
-| `rect` | The rectangle representing the pixel array's dimensions | `Rect` |
 
 ## Methods
 ---
@@ -58,6 +57,19 @@ _**Parameters**_
 - `pixel_array`: The pixel array to blit onto this one.
 - `dst`: The destination rectangle to blit to.
 - `src`: The source rectangle to blit from.
+
+</div>
+
+### Get Rect
+<div className="api-card">
+
+<ApiSig name="get_rect" returns="Rect" />
+
+Get the rectangle representing the pixel array's dimensions.
+
+_**Returns**_
+
+`Rect` : The pixel array's rectangle.
 
 </div>
 
