--- a/contents/docs/classes/texture/index.mdx
+++ b/contents/docs/classes/texture/index.mdx
@@ -11,22 +11,13 @@ description: A 2D texture that can be rendered to the screen.
 | Name | Description | Type |
 | --- | --- | --- |
 | `flip` | Whether the texture is flipped horizontally and/or vertically | `Flip` |
-| `angle` | The rotation angle of the texture in degrees | `float` |
+| `angle` | The rotation angle of the texture in radians | `float` |
+| `size` | The original width and height of the texture | `Vec2` |
+| `alpha` | The alpha modulation of the texture (0.0 to 1.0) | `float` |
+| `tint` | The color tint applied to the texture during rendering | `Color` |
 
 ## Methods
 ---
-
-### Get Size
-<div className="api-card">
-
-<ApiSig name="get_size" returns="Vec2" />
-
-Get the size of the texture.
-
-_**Returns**_
-`Vec2` : The size of the texture as a Vec2.
-
-</div>
 
 ### Get Rect
 <div className="api-card">
@@ -37,55 +28,6 @@ Get the rectangle of the texture.
 
 _**Returns**_
 `Rect` : The dimensions of the texture as a Rect.
-
-</div>
-
-### Set Tint
-<div className="api-card">
-
-<ApiSig name="set_tint" params={[{name: 'color', type: 'Color'}]} returns="None" />
-
-Set the color tint applied to the texture during rendering.
-
-_**Parameters**_
-- `color` : The color to apply as a tint.
-
-</div>
-
-### Get Tint
-<div className="api-card">
-
-<ApiSig name="get_tint" returns="Color" />
-
-Get the current color tint applied to the texture.
-
-_**Returns**_
-`Color` : The current color tint of the texture.
-
-</div>
-
-### Set Alpha
-<div className="api-card">
-
-<ApiSig name="set_alpha" params={[{name: 'alpha', type: 'float'}]} returns="None" />
-
-Set the alpha modulation of the texture.
-
-_**Parameters**_
-- `alpha` : The alpha modulation value to set.
-
-</div>
-
-### Get Alpha
-<div className="api-card">
-
-<ApiSig name="get_alpha" returns="float" />
-
-Get the alpha modulation of the texture.
-
-_**Returns**_
-`float` : The alpha modulation value of the texture.
-
 </div>
 
 ### Make Additive
@@ -94,7 +36,6 @@ _**Returns**_
 <ApiSig name="make_additive" returns="None" />
 
 Set the texture's blending mode to additive.
-
 </div>
 
 ### Make Multiply
@@ -103,7 +44,6 @@ Set the texture's blending mode to additive.
 <ApiSig name="make_multiply" returns="None" />
 
 Set the texture's blending mode to multiply.
-
 </div>
 
 ### Make Normal
@@ -112,5 +52,4 @@ Set the texture's blending mode to multiply.
 <ApiSig name="make_normal" returns="None" />
 
 Set the texture's blending mode to normal.
-
 </div>
