add save_screenshot window function

--- a/contents/docs/functions/window/index.mdx
+++ b/contents/docs/functions/window/index.mdx
@@ -119,3 +119,16 @@ _**Returns**_
 `int` : The current scale factor of the window.
 
 </div>
+
+## Save Screenshot
+<div className="api-card">
+
+<ApiSig name="save_screenshot" params={[{ name: "path", type: "str" }]} returns="None" />
+
+Save a screenshot of the current window content to a file.
+
+_**Parameters**_
+
+- `path` : The file path where the screenshot will be saved.
+
+</div>
