Add collision docs, shader/tile classes, and multiline API sigs
Introduces documentation for collision functions, shader state/uniform, tile, and tile layer classes. Refactors ApiSig to support multiline formatting and updates usage in relevant docs. Expands event and keycode/scancode constants in the manual. Moves 'Getting Started' docs to guides, updates route configs, and improves API signature block styling.

--- a/contents/docs/classes/animation-controller/index.mdx
+++ b/contents/docs/classes/animation-controller/index.mdx
@@ -19,7 +19,7 @@ description: An sprite animation manager and controller.
 ### Load Sprite Sheet
 <div className="api-card">
 
-<ApiSig name="load_sprite_sheet" params={[{ name: "name", type: "str" }, { name: "file_path", type: "str" }, { name: "frame_size", type: "Vec2" }, { name: "fps", type: "int" }]} returns="None" />
+<ApiSig name="load_sprite_sheet" multiline params={[{ name: "name", type: "str" }, { name: "file_path", type: "str" }, { name: "frame_size", type: "Vec2" }, { name: "fps", type: "int" }]} returns="None" />
 
 Load animation frames from a sprite sheet image.
 
