--- a/contents/docs/classes/color/index.mdx
+++ b/contents/docs/classes/color/index.mdx
@@ -3,6 +3,8 @@ title: Color
 description: A color representation in different formats.
 ---
 - <ApiSig name="Color" />
+- <ApiSig name="Color" params={[{ name: "hex", type: "str" }]} />
+- <ApiSig name="Color" params={[{ name: "rgba", type: "Sequence[int, int, int, int]" }]} />
 - <ApiSig name="Color" params={[{ name: "r", type: "int" }, { name: "g", type: "int" }, { name: "b", type: "int" }, { name: "a", type: "int", default: '255' }]} />
 
 ## Properties
